# modular-monolith

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.postgresql.yml  generate_project.py  guilde_setup.md  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.py  setup_aliases.sh
alembic/: env.py
alembic/versions/: 2025_11_28_0807-41868e39ec96_initial_migration.py  2025_11_28_0858-c660eefe25ff_initial_migration.py
architecture-docs/: README.md  SUMMARY.md  package-lock.json  package.json
architecture-docs/public/: index.html
architecture-docs/src/: App.js
architecture-docs/src/components/: ApplicationArchitecture.js  DatabaseSchema.js  DeploymentArchitecture.js  MigrationSeedPractices.js  ModuleDependencyFlows.js  ModuleInteractionFlows.js  UseCaseFlows.js
cli/: generate_module.py  guide.md  sumanry.md
docs/adr/: 0001-use-fastapi-and-sqlalchemy-instead-of-django.md  0002-adopt-clean-architecture-modular-monolith-ddd copy.md  0003-manage-unit-of-work-at-controller-level.md
docs/api/: README.md
docs/architecture/: README.md  note.md  project_structure.md
docs/development/: README.md
scripts/: check_seed_setup.py  debug_alembic.py  generate_types.py  init_db.py  migrate.py  seed.py  seed_debug.py
src/: main.py
src/bootstrapper/: __init__.py  app_factory.py  container.py  module_loader.py
src/config/: __init__.py  logging_config.py  settings.py
src/config/environments/: development.py  production.py  testing.py
src/core/: __init__.py
src/core/application/: __init__.py  base_command.py  base_query.py  base_service.py  dto.py
src/core/domain/: __init__.py  base_aggregate.py  base_entity.py  enums.py  events.py  value_objects.py
src/core/exceptions/: __init__.py  base_exceptions.py  error_codes.py
src/core/interfaces/: __init__.py  repositories.py  services.py  unit_of_work.py
src/infrastructure/: __init__.py
src/infrastructure/cache/: __init__.py  redis_client.py
src/infrastructure/database/: __init__.py  base.py  connection.py  session.py  (+1 more)
src/modules/: __init__.py
src/shared/: __init__.py
test_script/: README.md.md  generate_project_v2.py  generate_project_v3.py  project_files.py
test_script/pamola-studio/: Makefile  QUICKSTART.md  setup.bat  setup.sh
test_script/thieptest/: CHECKLIST.md  QUICKSTART.md
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_health_check.py  test_user_api.py
tests/integration/: test_unit_of_work.py  test_user_repository.py
(+107 files in other folders)
